# CMakeFromScratch

./: .gitignore  ReadMe.md
001_first_cmake/: 001_first_cmake.cpp  CMakeLists.txt
002_cmake_lib/: CMakeLists.txt
002_cmake_lib/test_xlog/: CMakeLists.txt  test_xlog.cpp
002_cmake_lib/xlog/: CMakeLists.txt  xlog.h
003_message/: CMakeLists.txt  test_message.cpp
004_variable/: CMakeLists.txt
005_message_color/: CMakeLists.txt
006_cmake_system_ver/: xlog.cpp  xlog.h
007_cmake_include/: CMakeLists.txt
007_cmake_include/cmake/: test_cmake.cmake
008_auto_src/: CMakeLists.txt  main.cpp
008_auto_src/include/: xlog.h  xthread.hpp
008_auto_src/src/: xlog.cpp  xtest.c  xthread.cc
009_cmake_out/: CMakeLists.txt
009_cmake_out/xlog/: CMakeLists.txt
010_add_subdirectory/: CMakeLists.txt
010_add_subdirectory/xlog/: CMakeLists.txt  xlog.h
101_if/: CMakeLists.txt
102_cmake_cache/: CMakeLists.txt
102_cmake_cache/sub1/: CMakeLists.txt
102_cmake_cache/sub2/: CMakeLists.txt
103_property/: CMakeLists.txt  main.cpp
103_property/sub1/: CMakeLists.txt
104_env/: CMakeLists.txt
104_env/sub1/: CMakeLists.txt
105_math/: CMakeLists.txt
106_string/: CMakeLists.txt
107_json/: CMakeLists.txt
108_list/: CMakeLists.txt
109_foreach_while/: CMakeLists.txt
110_macro/: CMakeLists.txt
111_function/: CMakeLists.txt
111_function/sub1/: CMakeLists.txt
201_exp/: CMakeLists.txt  cmake_exp.cpp
202_target_include_link/: CMakeLists.txt  a.cpp  b.cpp  main.cpp
203_compile_features/: CMakeLists.txt  main.cpp
204_object_files/: CMakeLists.txt  b.cpp  main.cpp
205_lib_version/: CMakeLists.txt  a.cpp  main.cpp
206_debug_release/: CMakeLists.txt
206_debug_release/include/: dlib.h
206_debug_release/src/: dlib.cpp  main.cpp  slib.cpp
207_vs_MultiThreaded/: CMakeLists.txt  main.cpp  slib.cpp
208_vs_group/: CMakeLists.txt  main.cpp
301_install/: CMakeLists.txt  dlib.cpp  main.cpp  slib.cpp
301_install/include/: dlib.h
302_install_file/: CMakeLists.txt
303_install_dir/: CMakeLists.txt
304_install_code/: CMakeLists.txt  install_log.txt
305_install_component/: CMakeLists.txt
306_find_package/: CMakeLists.txt  slib.cpp
306_find_package/include/: slib.h
307_find_package_example/: CMakeLists.txt  main.cpp
401_ctest/: CMakeLists.txt  main.cpp
402_fetch_gtest/: CMakeLists.txt  gtest_fetch.cpp
